Fixes warnings (reported by static code analysis).